# file-encryption-system

./: CMakeLists.txt
src/: main.cpp
src/crypto/aes/: CMakeLists.txt  libtest.cpp
src/crypto/aes/aes-gcm/: aes-gcm.cpp  aes-gcm.h
src/crypto/kdf/: kdf.cpp
src/utils/: codec-interface.h
src/utils/base64/: base64.cpp  base64.h
src/utils/file-picker/: file-picker.cpp  file-picker.h
src/utils/passphrase-checker/: passphrase-checker.cpp  passphrase-checker.h
src/utils/pickers/: pickers.cpp  pickers.h
src/utils/salt-generator/: salt-generator.cpp  salt-generator.h
ui/: app.slint
